<resources>
    <string name="app_name">Film space</string>
    <string name="poster_of_movie">Poster</string>
    <string name="all_popular_movies">All movies</string>
    <string name="rated_movies">Rating films</string>
    <string name="AddToFavourite">Add to favorites</string>
    <string name="add_to_favourite">Added to favorites</string>
    <string name="delete_from_favourite">Removed from favorites</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_favourites">Favorites</string>
    <string name="bottom_random">Random</string>
    <string name="launch_trailer">Launch trailer</string>
    <string name="bottom_search">Search</string>
    <string name="title">Title:</string>
    <string name="original_title">Original\ntitle:</string>
    <string name="rating">Rating:</string>
    <string name="release_date">Release date:</string>
    <string name="description">Description:</string>
    <string name="in_favourite">In favourite</string>
    <string name="image_rocket">Rocket image</string>
    <string name="random_action_description">Let\'s pick one random movie from our favorites.\nJust shake the device.\nGo!</string>
    <string name="random_warning">No movies in favorites.\nAdd films to collection.</string>
    <string name="description_poster">Poster</string>
    <string name="search_hint">Enter the title</string>
    <string name="search">Search</string>
    <string name="search_history">It was interesting for you:</string>
    <string name="clear">Clear</string>
    <string name="favourites_is_empty">There are no films yet.</string>
    <string name="no_internet_connection">No Internet connection</string>
    <string name="nothing_found">Nothing found</string>
    <string name="search_warning">Enter the title of the movie, or part of the title to search</string>
    <string name="data_not_updated">Data not updated</string>
    <string name="data_updated">Data updated</string>
</resources>